SigmaCodebackup3rdSep/objects/Work_Order_TimeSheets__c.object
<CustomObject>
    <fields>
        <fullName>Check_In_Date_Time__c</fullName>
        <label>Check-In Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Location__c</fullName>
        <label>Check-In Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_In_Pincode__c</fullName>
        <label>Check-In Pincode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date_Time__c</fullName>
        <label>Check-Out Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Location__c</fullName>
        <label>Check-Out Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_Out_Pincode__c</fullName>
        <label>Check-Out Pincode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normal_Service_Time_In_mins__c</fullName>
        <label>Service Time - Normal(In mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Streched_Service_Time_In_mins__c</fullName>
        <label>Service Time - Streched(In mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Travel_Time__c</fullName>
        <label>Total Travel Time(In mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipName>Work_Orders_TimeSheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Work_Order__c</columns>
        <columns>Service_Date__c</columns>
        <columns>Normal_Service_Time_In_mins__c</columns>
        <columns>Streched_Service_Time_In_mins__c</columns>
        <columns>Total_Travel_Time__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Timesheets</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Timesheet #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Not_Allow_Streched_service_more_than_480</fullName>
        <active>true</active>
        <errorConditionFormula>Streched_Service_Time_In_mins__c &gt;240</errorConditionFormula>
        <errorMessage>Entered time should not be more than 240mins.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Allow_normal_service_more_than_480</fullName>
        <active>true</active>
        <errorConditionFormula>Normal_Service_Time_In_mins__c &gt;480</errorConditionFormula>
        <errorMessage>Time entered should not be greater than 480.</errorMessage>
    </validationRules>
</CustomObject>